--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 color-eyre = "0.6"
-rustls-pemfile = "1.0"
+native-tls = { version = "0.2", features = ["vendored"] }
+obfstr = "0.4"
 tokio = { version = "1", features = ["full"] }
-tokio-rustls = "0.23"
-tokio-tungstenite = { version = "0.18", features = ["__rustls-tls", "connect"] }
+tokio-native-tls = { version = "0.3", features = ["vendored"] }
+tokio-tungstenite = { version = "0.18", features = ["connect", "native-tls-vendored"] }
 tracing = { version = "0.1", features = ["attributes"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
