Add `"connect"` feature
- `cargo run` runs server and client.
- `cargo run --no-default-features` runs server only. This mode
  demonstrates, that the server is operational and can be connected
  to via Postman app or `openssl s_client`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["connect"]
+connect = []
+
 [dependencies]
 color-eyre = "0.6"
 native-tls = { version = "0.2", features = ["vendored"] }
